@@ -18,12 +18,20 @@ if RUBY_PLATFORM =~ /cygwin/
   end
 end
 
-so_basename = nil
+so_basename = 'oci8lib_'
+if defined? RUBY_ENGINE and RUBY_ENGINE != 'ruby'
+  so_basename += RUBY_ENGINE
+end
+
+# The suffix number indicates the ruby API version.
+#  18  - ruby 1.8.x
+#  191 - ruby 1.9.1 and 1.9.2
+#  19x - ruby 1.9.x future version which will break the API compatibility
 case RUBY_VERSION
 when /^1\.9/
-  so_basename = 'oci8lib_191'
+  so_basename += '191'
 when /^1\.8/
-  so_basename = 'oci8lib_18'
+  so_basename += '18'
 else
   raise 'unsupported ruby version: ' + RUBY_VERSION
 end
